Dev Org/src/objects/Travel__mdt.object
<CustomObject>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <label>No of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Travel</label>
    <pluralLabel>Travels</pluralLabel>
</CustomObject>